# hurrqueue

./: .pre-commit-config.yaml  Makefile  README.md  my_test_class.json  pyproject.toml
environments/: docker-compose-postgres.yaml
hurrqueue/: __init__.py
hurrqueue/connectors/: sa.py
shell/: mypy.sh  pytest.sh  ruff.sh
snailqueue/: __init__.py  base.py
snailqueue/connectors/: sa.py
snailqueue/schema/: __init__.py
tests/: test_general.py  test_sa.py  test_schema.py
